substancial changes to RegEx and parse methods